# camera-recog

./: .env.example  .gitignore  API_REFERENCE.md  ARCHITECTURE.md  AUTO_SCREENSHOT_EXPLAINED.md  CHANGELOG.md  CONTRIBUTING.md  CRITICAL_BUG_FIX.md  Dockerfile  FIXES_APPLIED.md  FRONTEND_UI_COMPLETE.md  HAND_GESTURE_DETECTION.md  IMPROVEMENTS_APPLIED.md  IMPROVEMENTS_SUMMARY.md  INSTALL.bat  INSTALL.md  INSTALLATION_COMPLETE.md  PORTFOLIO_GUIDE.md  QUICKSTART.md  QUICKSTART_COMMANDS.md  QUICK_REFERENCE.md  README.md  README_PORTFOLIO.md  README_PROFESSIONAL.md  RECRUITER_GUIDE.md  RUN.bat  RUN_INSTRUCTIONS.md  RUN_NEW.bat  RUN_WEB_UI.bat  SETUP_NEW.bat  SYSTEM_ARCHITECTURE.md  TESTING.md  TESTING_GUIDE.md  UPGRADE_CHECKLIST.md  VOICE_COMMANDS_GUIDE.md  WEB_UI_FEATURES.md  WEB_UI_README.md  WEB_UI_SETUP_GUIDE.md  action_executor.py  app.py  (+24 more)
static/: app.js  style.css
templates/: index.html
