[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gesture-ai-agent"
version = "2.0.0"
description = "A professional-grade gesture recognition AI agent with voice control and mood-based actions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Ankit", email = "ankit@example.com"}
]

keywords = [
    "gesture-recognition",
    "computer-vision",
    "ai-agent",
    "voice-control",
    "facial-detection"
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics :: Capture",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "opencv-python>=4.8.0,<5.0.0",
    "mediapipe>=0.10.30,<0.11.0",
    "numpy>=1.24.0,<2.0.0",
    "pyttsx3>=2.90,<3.0.0",
    "sounddevice>=0.5.0,<0.6.0",
    "SpeechRecognition>=3.10.0,<4.0.0",
    "PyAudio>=0.2.13",
    "transformers>=4.35.0,<5.0.0",
    "torch>=2.1.0,<3.0.0",
    "requests>=2.31.0,<3.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.11.1,<4.0.0",
    "black>=23.9.0,<24.0.0",
    "flake8>=6.1.0,<7.0.0",
    "mypy>=1.5.0,<2.0.0",
    "isort>=5.12.0,<6.0.0",
    "pylint>=3.0.0,<4.0.0",
    "pre-commit>=3.4.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/gesture-ai-agent"
Documentation = "https://github.com/yourusername/gesture-ai-agent/blob/main/README.md"
Repository = "https://github.com/yourusername/gesture-ai-agent"
Issues = "https://github.com/yourusername/gesture-ai-agent/issues"

[tool.setuptools]
packages = ["gesture_ai_agent"]

[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
skip_glob = ["*/migrations/*"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "--cov=. --cov-report=xml --cov-report=term-missing"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
